force-app/main/default/objects/PRM_Services__c/PRM_Services__c.object-meta.xml
<CustomObject>
    <description>Object containing details of service relationship with reseller and other partner type accounts</description>
    <label>PRM Services</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>PRM Services Acct #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRM Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>