force-app/main/default/objects/PRM_Services__c/fields/Account_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Code__c</fullName>
    <formula>TEXT( Account_Name__r.Account_Country_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Country Code</label>
    <type>Text</type>
</CustomField>