force-app/main/default/objects/PRM_Services__c/fields/Bill_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Address__c</fullName>
    <description>Address to distributes services related billing to.</description>
    <label>Bill to Address</label>
    <type>TextArea</type>
</CustomField>