force-app/main/default/objects/PRM_Services__c/fields/Commision_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Commision_Renewal__c</fullName>
    <description>Commission percentage paid upon contract renewal.</description>
    <label>Commision % - Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>