force-app/main/default/objects/PRM_Services__c/fields/European_Union__c.field-meta.xml
<CustomField>
    <fullName>European_Union__c</fullName>
    <defaultValue>false</defaultValue>
    <label>European Union</label>
    <type>Checkbox</type>
</CustomField>