force-app/main/default/objects/PRM_Services__c/fields/Level_2_Remote_PIN__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Remote_PIN__c</fullName>
    <label>Level 2 Remote PIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>