force-app/main/default/objects/PRM_Services__c/fields/Master_Customer__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer__c</fullName>
    <formula>Account_Name__r.Master_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Customer #</label>
    <type>Text</type>
</CustomField>