force-app/main/default/objects/PRM_Services__c/fields/Participation_Number__c.field-meta.xml
<CustomField>
    <fullName>Participation_Number__c</fullName>
    <label>Participation #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>