force-app/main/default/objects/PRM_Services__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <formula>TEXT( Account_Name__r.Partner_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Type</label>
    <type>Text</type>
</CustomField>