force-app/main/default/objects/PRM_Services__c/fields/Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Status__c</fullName>
    <formula>TEXT(Account_Name__r.Partnership_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Status</label>
    <type>Text</type>
</CustomField>