force-app/main/default/objects/PRM_Services__c/fields/Primary_Solution__c.field-meta.xml
<CustomField>
    <fullName>Primary_Solution__c</fullName>
    <label>Primary Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banking: ATM</fullName>
            </value>
            <value>
                <fullName>Banking: Item Processing</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Misc. Network</fullName>
            </value>
            <value>
                <fullName>Multi-Vendor</fullName>
            </value>
            <value>
                <fullName>RHSS</fullName>
            </value>
            <value>
                <fullName>Scan Master SW Authorized</fullName>
            </value>
            <value>
                <fullName>Teradata</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Travel, Lodging and Gaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>