force-app/main/default/objects/PRM_Services__c/fields/Self_maintainer__c.field-meta.xml
<CustomField>
    <fullName>Self_maintainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-maintainer</label>
    <type>Checkbox</type>
</CustomField>