force-app/main/default/objects/PRM_Services__c/fields/Service_CAM__c.field-meta.xml
<CustomField>
    <fullName>Service_CAM__c</fullName>
    <label>Service CAM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>