force-app/main/default/objects/PRM_Services__c/fields/Service_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Partner_Type__c</fullName>
    <description>Type of relationship this partner has with NCR in respect to service.</description>
    <label>Service Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized Sales and Service Partner (ASSP)</fullName>
            </value>
            <value>
                <fullName>Basic Product User /Service</fullName>
            </value>
            <value>
                <fullName>Independent Service Organization</fullName>
            </value>
            <value>
                <fullName>Lead Referral</fullName>
            </value>
            <value>
                <fullName>No Agreement as Yet</fullName>
            </value>
            <value>
                <fullName>Original Equipment Manufacturer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refurbisher</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Self Maintainer</fullName>
            </value>
            <value>
                <fullName>Servicing Integrator</fullName>
            </value>
            <value>
                <fullName>Servicing Partner</fullName>
            </value>
            <value>
                <fullName>Shared Maintenance Provider</fullName>
            </value>
            <value>
                <fullName>Shared Service</fullName>
            </value>
            <value>
                <fullName>Sub-Contractor</fullName>
            </value>
            <value>
                <fullName>Subscription Service Offer</fullName>
            </value>
            <value>
                <fullName>Tier-1 Service Partner</fullName>
            </value>
            <value>
                <fullName>TSD Only</fullName>
            </value>
            <value>
                <fullName>International Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>