force-app/main/default/objects/PRM_Services__c/fields/Service_Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Relationship_Status__c</fullName>
    <label>Service Relationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active-Unsigned</fullName>
            </value>
            <value>
                <fullName>No Status</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Terminated--For Cause</fullName>
            </value>
            <value>
                <fullName>Terminated--Material Breach</fullName>
            </value>
            <value>
                <fullName>Terminated--Without Cause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>