force-app/main/default/objects/PRM_Services__c/fields/Set_up_Fee_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Set_up_Fee_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set-up Fee Invoice</label>
    <type>Checkbox</type>
</CustomField>