force-app/main/default/objects/PRM_Services__c/fields/Ship_to_Description__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Description__c</fullName>
    <label>Ship to Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>